[tool.poetry]
name = "twitter-agent"
version = "0.1.0"
description = "Agent to automate twitter marketing"
authors = ["Ramon Prieto <“ramon_prieto12@gmail.com”>"]
readme = "README.md"
packages = [{include = "twitter_agent"}]

[tool.poetry.dependencies]
python = ">=3.8.3,<4.0"
langchain = "^0.0.144"
pydantic = "^1.10.7"
faiss-cpu = "^1.7.3"
openai = "^0.27.4"
tiktoken = "^0.3.3"
google-search-results = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
